# blackjack_game

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/superpowers/plans/: 2026-05-11-blackjack-game.md
docs/superpowers/specs/: 2026-05-11-blackjack-game-design.md
scripts/: build_exe.ps1  prepare_card_images.py
src/blackjack/: __init__.py  card_images.py  cards.py  cli.py  game.py  gui.py  rules.py
tests/: test_card_images.py  test_cards.py  test_game.py  test_gui.py  test_rules.py
