[project]
name = "blackjack-game"
version = "0.1.0"
description = "A single-player Blackjack game with terminal and tkinter interfaces."
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
